提交一个文档说明,欢迎补充

--- a/SixGroup/SixGroup/SixGroup.csproj
+++ b/SixGroup/SixGroup/SixGroup.csproj
@@ -79,5 +79,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="文档说明\vs 连接git,获取和拉取代码须知.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
